@@ -13,27 +13,29 @@ public class moneyboost implements Cmd {
     @Override
     @JobCommand(2400)
     public boolean perform(Jobs plugin, final CommandSender sender, final String[] args) {
-
 	if (args.length > 2 || args.length <= 1) {
 	    Jobs.getCommandManager().sendUsage(sender, "moneyboost");
 	    return true;
 	}
 
 	double rate = 1.0;
-	if (!args[1].equalsIgnoreCase("all") && !args[0].equalsIgnoreCase("reset"))
+	if (!args[1].equalsIgnoreCase("all") && !args[0].equalsIgnoreCase("reset")) {
 	    try {
 		rate = Double.parseDouble(args[1]);
 	    } catch (NumberFormatException e) {
 		Jobs.getCommandManager().sendUsage(sender, "moneyboost");
 		return true;
 	    }
-
-	Job job = Jobs.getJob(args[0]);
-	if (job == null) {
-	    sender.sendMessage(Jobs.getLanguage().getMessage("general.error.job"));
-	    return true;
 	}
 
+	if (args[0].equalsIgnoreCase("all")) {
+	    for (Job one : Jobs.getJobs()) {
+		one.addBoost(CurrencyType.MONEY, rate);
+	    }
+
+	    sender.sendMessage(Jobs.getLanguage().getMessage("command.moneyboost.output.boostalladded", "%boost%", rate));
+	    return true;
+	}
 
 	if (args[0].equalsIgnoreCase("reset") && args[1].equalsIgnoreCase("all")) {
 	    for (Job one : Jobs.getJobs()) {
@@ -42,7 +44,15 @@ public class moneyboost implements Cmd {
 
 	    sender.sendMessage(Jobs.getLanguage().getMessage("command.moneyboost.output.allreset"));
 	    return true;
-	} else if (args[0].equalsIgnoreCase("reset")) {
+	}
+
+	Job job = Jobs.getJob(args[0]);
+	if (job == null) {
+	    sender.sendMessage(Jobs.getLanguage().getMessage("general.error.job"));
+	    return true;
+	}
+
+	if (args[0].equalsIgnoreCase("reset")) {
 	    boolean found = false;
 	    for (Job one : Jobs.getJobs()) {
 		if (one.getName().equalsIgnoreCase(args[1])) {
@@ -56,15 +66,6 @@ public class moneyboost implements Cmd {
 		sender.sendMessage(Jobs.getLanguage().getMessage("command.moneyboost.output.jobsboostreset", "%jobname%", job.getName()));
 		return true;
 	    }
-	}
-
-	if (args[0].equalsIgnoreCase("all")) {
-	    for (Job one : Jobs.getJobs()) {
-		one.addBoost(CurrencyType.MONEY, rate);
-	    }
-
-	    sender.sendMessage(Jobs.getLanguage().getMessage("command.moneyboost.output.boostalladded", "%boost%", rate));
-	    return true;
 	}
 
 	job.addBoost(CurrencyType.MONEY, rate);
