@@ -13,27 +13,27 @@ public class pointboost implements Cmd {
     @Override
     @JobCommand(2400)
     public boolean perform(Jobs plugin, final CommandSender sender, final String[] args) {
-
 	if (args.length > 2 || args.length <= 1) {
 	    Jobs.getCommandManager().sendUsage(sender, "pointboost");
 	    return true;
 	}
 
 	double rate = 1.0;
-	if (!args[1].equalsIgnoreCase("all") && !args[0].equalsIgnoreCase("reset"))
+	if (!args[1].equalsIgnoreCase("all") && !args[0].equalsIgnoreCase("reset")) {
 	    try {
 		rate = Double.parseDouble(args[1]);
 	    } catch (NumberFormatException e) {
 		Jobs.getCommandManager().sendUsage(sender, "pointboost");
 		return true;
 	    }
+	}
 
-	String PlayerName = sender.getName();
-	String jobName = args[0];
-	Job job = Jobs.getJob(jobName);
+	if (args[0].equalsIgnoreCase("all")) {
+	    for (Job one : Jobs.getJobs()) {
+		one.addBoost(CurrencyType.POINTS, rate);
+	    }
 
-	if (PlayerName == null) {
-	    Jobs.getCommandManager().sendUsage(sender, "pointboost");
+	    sender.sendMessage(Jobs.getLanguage().getMessage("command.pointboost.output.boostalladded", "%boost%", rate));
 	    return true;
 	}
 
@@ -43,7 +43,15 @@ public class pointboost implements Cmd {
 	    }
 	    sender.sendMessage(Jobs.getLanguage().getMessage("command.pointboost.output.allreset"));
 	    return true;
-	} else if (args[0].equalsIgnoreCase("reset")) {
+	}
+
+	Job job = Jobs.getJob(args[0]);
+	if (job == null) {
+	    sender.sendMessage(Jobs.getLanguage().getMessage("general.error.job"));
+	    return true;
+	}
+
+	if (args[0].equalsIgnoreCase("reset")) {
 	    boolean found = false;
 	    for (Job one : Jobs.getJobs()) {
 		if (one.getName().equalsIgnoreCase(args[1])) {
@@ -59,19 +67,6 @@ public class pointboost implements Cmd {
 	    }
 	}
 
-	if (args[0].equalsIgnoreCase("all")) {
-
-	    for (Job one : Jobs.getJobs()) {
-		one.addBoost(CurrencyType.POINTS, rate);
-	    }
-
-	    sender.sendMessage(Jobs.getLanguage().getMessage("command.pointboost.output.boostalladded", "%boost%", rate));
-	    return true;
-	}
-	if (job == null) {
-	    sender.sendMessage(Jobs.getLanguage().getMessage("general.error.job"));
-	    return true;
-	}
 	job.addBoost(CurrencyType.POINTS, rate);
 	sender.sendMessage(Jobs.getLanguage().getMessage("command.pointboost.output.boostadded", "%boost%", rate, "%jobname%", job.getName()));
 	return true;
