@@ -4,6 +4,7 @@
 - Fixed SQLException when inserting a job
 - Adding and taking exp should calculating correctly
 - Fixed exception if the enchantment level is null
+- Fixed when the boost commands are not worked
 
 # 4.14.0
 - Fixed %titlename% placeholder does not showed anything
